# backup-suite

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: release.yml
cli/: CMakeLists.txt
cli/include/: main.h
cli/src/: main.cpp
cmake/: CPackConfigCLI.cmake.in  CPackConfigGUI.cmake.in
core/: CMakeLists.txt  README.md
core/include/: api.h  device.h  entities.h  system_device.h
core/include/backup/: backup_controller.h
core/include/compress/: huffman.h
core/include/encryption/: rc.h  zip_crypto.h
core/include/filesystem/: compresses_device.h  device.h  entities.h  seven_zip_device.h  system_device.h
core/include/utils/: admin_privilege.h  bstream.h  crc.h  database.h  database_strategies.h  endian.h  fs_deleter.h  sevenzip_backend.h  streams.h  tar.h  time_converter.h  tmpfile.h  zip.h
core/src/: system_device.cpp
core/src/backup/: backup_controller.cpp
core/src/encryption/: rc.cpp  zip_crypto.cpp
core/src/filesystem/: compresses_device.cpp  device.cpp  entities.cpp  seven_zip_device.cpp  system_device.cpp
core/src/utils/: admin_privilege.cpp  crc.cpp  database.cpp  sevenzip_backend.cpp  tar.cpp  time_converter.cpp  tmpfile.cpp  zip.cpp
docs/: 系统设计文档.docx  系统设计文档.md  软件测试报告.docx  软件测试报告.md  软开实验报告 尹晨铭.docx  需求分析说明书.docx  需求分析说明书.md
docs/uml/: 构件图.mdj
gui/: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  README.md  main.cpp
tests/include/core/: core_utils.h
tests/src/core/: core_utils.cpp  test_core_backup_suite.cpp  test_core_compress.cpp  test_core_compress_device.cpp  test_core_compress_methods.cpp  test_core_device.cpp  test_core_encrypt.cpp  test_core_seven_zip_all.cpp
